examples/st2110/invalid/08_missing_ssn.sdp
v=0
o=- 1000 1 IN IP4 192.168.1.1
s=ST2110 Metadata Bad
t=0 0
m=video 5030 RTP/AVP 96
c=IN IP4 239.100.0.4/64
a=rtpmap:96 ST2110-41/90000
a=fmtp:96 DIT=100
a=mediaclk:direct=0
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
